--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,14 @@
         android:theme="@style/Theme.FinalProjectApartTalk"
         tools:targetApi="31">
         <activity
+            android:name=".ui.facility.FacReservationActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.location.LocationShowActivity"
             android:exported="false" />
         <activity
             android:name=".ui.entiremenu.AptSchedule.AptScheduleActivity"
             android:exported="true" />
-
         <activity
             android:name=".MainActivity"
             android:exported="false" />
