--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FinalProjectApartTalk"
         tools:targetApi="31">
         <activity
+            android:name=".ui.entiremenu.CompanyInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.facility.DetailFacilityActivity"
             android:exported="false" />
         <activity
