--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,18 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProjectApartTalk"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.login.SignUpActivity"
             android:exported="false"
-            android:theme="@style/CustomTheme_Login"/>
+            android:theme="@style/CustomTheme" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:theme="@style/CustomTheme" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/Base.Theme.ApartTalk">
+            android:theme="@style/Base.Theme.ApartTalk" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
