--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.entiremenu.FireCheck.FireCheckActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.login.SignUpActivity"
             android:exported="false"
             android:theme="@style/CustomTheme" />
