--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.parking.ParkingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.vote.VoteActivity"
             android:exported="false" />
         <activity
@@ -33,7 +36,6 @@
         <activity
             android:name=".ui.entiremenu.FireCheck.FireCheckActivity"
             android:exported="true" />
-
         <activity
             android:name=".ui.login.SignUpActivity"
             android:exported="false"
