--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.inquiry.InquiryActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
             android:name=".ui.vote.VoteActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.reservation.ReserveActivity"
             android:exported="false" />
@@ -33,7 +38,6 @@
         <activity
             android:name=".ui.entiremenu.FireCheck.FireCheckActivity"
             android:exported="true" />
-
         <activity
             android:name=".ui.login.SignUpActivity"
             android:exported="false"
