--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,20 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name="com.kakao.sdk.auth.AppsHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- 배송지 피커를 위한 설정 -->
+                <data android:scheme="${NATIVE_APP_KEY}}" />
+                <data android:host="address" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.parking.ParkingActivity"
             android:exported="false" />
         <activity
