fix : #181 manifest 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/aparttalk5"
+        android:label="@string/ApartTalk_App_Name"
+        android:roundIcon="@mipmap/aparttalk5_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProjectApartTalk"
         android:usesCleartextTraffic="true"
