[fix #179] 체크박스 테마 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,11 +56,13 @@
         <activity
             android:name=".ui.inquiry.InquiryActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/CustomTheme"/>
         <activity
             android:name=".ui.vote.VoteActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/CustomTheme"/>
         <activity
             android:name=".ui.reservation.ReserveActivity"
             android:exported="false" />
